--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="container">
             <div id="cat-img"></div>
-            <input type="text" id="input-field" placeholder="Bread">
+            <input type="text" id="input-field" placeholder="Items to buy">
             <button id="add-button">Add to cart</button>
             <ul id="shopping-list">
                
